--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.100.0"
+    "vscode": "^1.90.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": ["*"],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -17,7 +17,17 @@
         "command": "kaas-vscode.helloWorld",
         "title": "Hello World"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "KaaS Configuration",
+      "properties": {
+        "kaas-vscode.apiKey": {
+          "type": "string",
+          "default": "default value",
+          "description": "API Key for KaaS"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
