--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,25 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
+		"module": "CommonJS",
+		"moduleResolution": "Node",
 		"target": "ES2022",
 		"lib": [
-			"ES2022"
+			"ES2022",
+			"DOM"
 		],
 		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"rootDir": ".",
+		"strict": true,
+		"outDir": "dist",
+		"esModuleInterop": true,
+		"allowJs": true
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+	},
+	"include": [
+		"src/**/*",
+		"webpack.config.js"
+, "eslint.config.mjs"	]
 }
