--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,5 +3,18 @@
 {
 	"version": "2.0.0",
 	"tasks": [
+		{
+			"type": "npm",
+			"script": "build",
+			"isBackground": true,
+			"problemMatcher": "$tsc-watch",
+			"presentation": {
+				"reveal": "silent",
+			},
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
+		},
 	]
 }
