--- a/package.json
+++ b/package.json
@@ -111,5 +111,8 @@
   "dependencies": {
     "openapi-fetch": "^0.14.0",
     "smol-toml": "^1.3.4"
-  }
+  },
+  "extensionDependencies": [
+    "vscode.git"
+  ]
 }
