Adding a license for VSX

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "kaas-vscode",
   "displayName": "K as a Service",
-  "description": "",
+  "description": "K as a Service (KaaS) extension for VS Code providing K framework integration and tooling",
+  "license": "BSD-3-Clause",
   "version": "0.0.1",
   "publisher": "runtimeverification",
   "repository": {
