--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,6 +48,7 @@
     
                 - name:  Publish extension to Visual Studio Marketplace
                   id: create_vsix
+                  continue-on-error: true
                   uses: HaaLeo/publish-vscode-extension@v1
                   with:
                     pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
