--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/runtimeverification/kaas-vscode"
   },
   "engines": {
-    "vscode": "^1.100.0"
+    "vscode": "^1.98.2"
   },
   "categories": [
     "Other"
@@ -52,7 +52,7 @@
     "menus": {
       "view/title": [
         {
-          "command": "kaas-vscode.refreshEntry",
+          "command": "kaas-vscode.refreshSyncView",
           "when": "view == kaas-vscode.remote-sync-view",
           "group": "navigation"
         }
