--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "audit-kontrol-template"]
 	path = audit-kontrol-template
 	url = https://github.com/runtimeverification/audit-kontrol-template.git
+[submodule "foundry-demo"]
+	path = foundry-demo
+	url = ./foundry-demo
