--- a/package.json
+++ b/package.json
@@ -69,7 +69,11 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "lint:fix": "eslint src --fix",
+    "fmt": "prettier --write \"src/**/*.{ts,js,json,md}\"",
+    "fmt:check": "prettier --check \"src/**/*.{ts,js,json,md}\"",
+    "test": "vscode-test",
+    "prepare": "husky .husky"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
@@ -80,6 +84,9 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.13.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "prettier": "^3.6.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
     "webpack": "^5.95.0",
@@ -88,6 +95,20 @@
   "dependencies": {
     "openapi-fetch": "^0.14.0",
     "smol-toml": "^1.3.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write --config ./.prettierrc.json"
+    ],
+    "src/**/*.{json,md}": [
+      "prettier --write --config ./.prettierrc.json"
+    ]
   },
   "extensionDependencies": [
     "vscode.git"
