--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "git-url-parse": "^16.1.0",
     "openapi-fetch": "^0.14.0",
     "smol-toml": "^1.3.4"
   },
