--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "K as a Service",
   "description": "K as a Service (KaaS) extension for VS Code providing K framework integration and tooling",
   "license": "BSD-3-Clause",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "publisher": "runtimeverification",
   "repository": {
     "type": "git",
@@ -29,6 +29,10 @@
         "command": "kaas-vscode.refreshSyncView",
         "title": "Refresh",
         "icon": "$(refresh)"
+      },
+      {
+        "command": "kaas-vscode.openJobInBrowser",
+        "title": "Open Job in Browser"
       }
     ],
     "configuration": {
@@ -55,6 +59,13 @@
           "command": "kaas-vscode.refreshSyncView",
           "when": "view == kaas-vscode.remote-sync-view",
           "group": "navigation"
+        }
+      ],
+      "testing/item/context": [
+        {
+          "command": "kaas-vscode.openJobInBrowser",
+          "when": "testItemContext == kaasTestWithJob",
+          "group": "inline"
         }
       ]
     }
