--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,65 +1,71 @@
 ---
-    name: Marketplace Release
-    on: 
-        workflow_dispatch:
-        push:
-            branches:
-                - main
-    jobs:
-        deploy-to-marketplace:
-            runs-on: ubuntu-latest
-            steps:
-                - name: 'Install nodejs 18'
-                  uses: actions/setup-node@v2
-                  with:
-                    node-version: '18'
-               
-                - name: Checkout code
-                  uses: actions/checkout@v4
-    
-                - name: Install dependencies
-                  run: |
-                    corepack enable
-                    yarn install
-    
-                - name: Build
-                  run: |
-                    yarn build
-    
-                - name: Get current package version
-                  id: package_version
-                  uses: martinbeentjes/npm-get-version-action@v1.1.0
-    
-                - name: Create a Release
-                  id: create_release
-                  uses: actions/create-release@v1
-                  env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  with:
-                    tag_name : ${{ steps.package_version.outputs.current-version}}
-                    release_name: ${{ steps.package_version.outputs.current-version}}
-                    body: Publish ${{ steps.package_version.outputs.current-version}}
-    
-                - name:  Publish extension to Visual Studio Marketplace
-                  id: create_vsix
-                  uses: HaaLeo/publish-vscode-extension@v1
-                  with:
-                    pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-                    registryUrl: https://marketplace.visualstudio.com
-    
-                - name: Publish extension to Open VSX
-                  uses: HaaLeo/publish-vscode-extension@v1
-                  with:
-                    pat: ${{ secrets.OPEN_VSX_TOKEN }}
-                    extensionFile: ${{ steps.create_vsix.outputs.vsixPath }}
-                    packagePath: ''
-                    
-                - name: Attach vsix to release
-                  uses: actions/upload-release-asset@v1
-                  env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  with:
-                    upload_url: ${{ steps.create_release.outputs.upload_url }}
-                    asset_path: ${{ steps.create_vsix.outputs.vsixPath}}
-                    asset_name: ${{ steps.create_vsix.outputs.vsixPath}}
-                    asset_content_type: application/vsix
+name: Marketplace Release
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+jobs:
+  deploy-to-marketplace:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Install nodejs 22'
+        uses: actions/setup-node@v2
+        with:
+          node-version: '22'
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          corepack enable
+          yarn install
+
+      - name: Build
+        run: |
+          yarn build
+
+      - name: Get current package version
+        id: package_version
+        uses: martinbeentjes/npm-get-version-action@v1.1.0
+
+      - name: Check version is mentioned in Changelog
+        uses: mindsers/changelog-reader-action@v2.0.0
+        with:
+          version: ${{ steps.package_version.outputs.current-version }}
+          path: 'CHANGELOG.md'
+
+      - name: Create a Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.package_version.outputs.current-version}}
+          release_name: ${{ steps.package_version.outputs.current-version}}
+          body: Publish ${{ steps.package_version.outputs.current-version}}
+
+      - name: Publish extension to Visual Studio Marketplace
+        id: create_vsix
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+          registryUrl: https://marketplace.visualstudio.com
+
+      - name: Publish extension to Open VSX
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.OPEN_VSX_TOKEN }}
+          extensionFile: ${{ steps.create_vsix.outputs.vsixPath }}
+          packagePath: ''
+
+      - name: Attach vsix to release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.create_vsix.outputs.vsixPath}}
+          asset_name: ${{ steps.create_vsix.outputs.vsixPath}}
+          asset_content_type: application/vsix
