--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "K as a Service",
   "description": "K as a Service (KaaS) extension for VS Code providing K framework integration and tooling",
   "license": "BSD-3-Clause",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "publisher": "runtimeverification",
   "repository": {
     "type": "git",
@@ -31,8 +31,19 @@
         "icon": "$(refresh)"
       },
       {
-        "command": "kaas-vscode.openJobInBrowser",
-        "title": "Open Job in Browser"
+        "command": "kaas-vscode.viewJobDetails",
+        "title": "View Job Details",
+        "icon": "$(link-external)"
+      },
+      {
+        "command": "kaas-vscode.viewReport",
+        "title": "View Report",
+        "icon": "$(file-text)"
+      },
+      {
+        "command": "kaas-vscode.viewCache",
+        "title": "View Cache",
+        "icon": "$(database)"
       }
     ],
     "configuration": {
@@ -42,6 +53,11 @@
           "type": "string",
           "default": "default value",
           "description": "API Key for KaaS"
+        },
+        "kaas-vscode.baseUrl": {
+          "type": "string",
+          "default": "https://kaas.runtimeverification.com",
+          "description": "Base URL for KaaS API endpoints"
         }
       }
     },
@@ -63,9 +79,13 @@
       ],
       "testing/item/context": [
         {
-          "command": "kaas-vscode.openJobInBrowser",
-          "when": "testItemContext == kaasTestWithJob",
-          "group": "inline"
+          "command": "kaas-vscode.viewJobDetails"
+        },
+        {
+          "command": "kaas-vscode.viewReport"
+        },
+        {
+          "command": "kaas-vscode.viewCache"
         }
       ]
     }
@@ -80,7 +100,12 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "lint:fix": "eslint src --fix",
+    "fmt": "prettier --write \"src/**/*.{ts,js,json,md}\"",
+    "fmt:check": "prettier --check \"src/**/*.{ts,js,json,md}\"",
+    "test": "vscode-test",
+    "check:all": "npm run lint && npm run fmt:check && npm run compile",
+    "prepare": "husky .husky"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
@@ -91,14 +116,32 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.13.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "prettier": "^3.6.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "git-url-parse": "^16.1.0",
     "openapi-fetch": "^0.14.0",
     "smol-toml": "^1.3.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write --config ./.prettierrc.json"
+    ],
+    "src/**/*.{json,md}": [
+      "prettier --write --config ./.prettierrc.json"
+    ]
   },
   "extensionDependencies": [
     "vscode.git"
