feat: Try to use webview iframe to display job/report/cache

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,12 +19,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          corepack enable
-          yarn install
+          npm install
 
       - name: Build
         run: |
-          yarn build
+          npm run build
 
       - name: Get current package version
         id: package_version
