Added parse-duration lib

--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
   "dependencies": {
     "git-url-parse": "^16.1.0",
     "openapi-fetch": "^0.14.0",
+    "parse-duration": "^2.1.4",
     "smol-toml": "^1.3.4"
   },
   "husky": {
